fix overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -551,6 +551,7 @@ p {
     background-repeat: no-repeat;
     background-color: #00000085;
     background-blend-mode: multiply;
+    overflow-x: hidden;
 }
 
 .hero-area .container{
@@ -680,6 +681,7 @@ p {
 
 .about-area{
     padding: 115px 15px;
+    overflow-x: hidden;
 }
 
 .services-card__wraper{
@@ -766,6 +768,7 @@ p {
     position: relative;
     padding: 195px 15px 118px;
     z-index: 1;
+    overflow-x: hidden;
 }
 
 .project-area .project-area-bg{
@@ -1041,6 +1044,7 @@ p {
 
 .choose-area{
     padding: 120px 15px;
+    overflow-x: hidden;
 }
 
 .services-wraper{
@@ -1171,6 +1175,7 @@ p {
 
 .property-area{
     padding: 120px 15px;
+    overflow-x: hidden;
 }
 
 .value-demo{
@@ -1278,6 +1283,7 @@ p {
 .client-reviews-area{
     border-bottom: 1px solid var(--border-color);
     background-color: var(--accent-color);
+    overflow-x: hidden;
 }
 
 .client-reviews-side{
@@ -1438,6 +1444,7 @@ p {
 .brand-logo-area{
     padding: 80px 15px;
     background-color: var(--accent-color);
+    overflow-x: hidden;
 }
 
 .brand-logo-area .container{
@@ -1629,6 +1636,7 @@ p {
     background-repeat: no-repeat;
     background-color: #000000a8;
     background-blend-mode: multiply;
+    overflow-x: hidden;
 }
 
 .faq-area .section-title .caption, .faq-area .section-title h2{
@@ -1747,6 +1755,7 @@ p {
 
 .blog-area{
     padding: 120px 15px;
+    overflow-x: hidden;
 }
 
 .blog-wraper{
@@ -1847,6 +1856,7 @@ p {
 .contact-area{
     padding: 120px 15px;
     background-color: var(--accent-color);
+    overflow-x: hidden;
 }
 
 .contact-content{
